--- a/onpoint_maintenance/views/onpoint_client_view.xml
+++ b/onpoint_maintenance/views/onpoint_client_view.xml
@@ -3,6 +3,61 @@
 <odoo>
     <data>
 
+        <record id="onpoint_client_tree" model="ir.ui.view">
+            <field name="name">onpoint.client.tree</field>
+            <field name="model">onpoint.client</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name"/>
+                    <field name="url"/>
+                    <field name="support_ids"/>
+                </tree>
+            </field>
+        </record>
+
+        <record id="onpoint_client_form" model="ir.ui.view">
+            <field name="name">onpoint.client.form</field>
+            <field name="model">onpoint.client</field>
+            <field name="arch" type="xml">
+                <form>
+                    <sheet>
+                        <group>
+                            <group>
+                                <field name="name"/>
+                            </group>
+                            <group>
+                                <field name="url"/>
+                            </group>
+                        </group>
+                        <notebook>
+                            <page string="Support" name="onpoint_client">
+                                <group>
+                                    <field name="support_ids" nolabel="1" widget="one2many_list">
+                                        <tree>
+                                            <field name="client_id"/>
+                                            <field name="support_type"/>
+                                            <field name="notes"/>
+                                            <field name="state"/>
+                                        </tree>
+                                        <form>
+                                            <group>
+                                                <group>
+                                                    <field name="client_id"/>
+                                                    <field name="support_type"/>
+                                                    <field name="notes"/>
+                                                    <field name="state"/>
+                                                </group>
+                                            </group>
+                                        </form>
+                                    </field>
+                                </group>
+                            </page>
+                        </notebook>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
         <record id="act_view_onpoint_client" model="ir.actions.act_window">
             <field name="name">Clients</field>
             <field name="type">ir.actions.act_window</field>
