--- a/onpoint_maintenance/views/onpoint_support_view.xml
+++ b/onpoint_maintenance/views/onpoint_support_view.xml
@@ -28,13 +28,14 @@
             <field name="model">onpoint.support</field>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="client_id"/>
                     <field name="submit_date"/>
+                    <field name="client_id"/>
                     <field name="support_type"/>
                     <field name="notes"/>
                     <field name="state"/>
                     <field name="approve_reject_date"/>
                     <field name="complete_date"/>
+                    <field name="complete_notes"/>
                 </tree>
             </field>
         </record>
@@ -53,13 +54,13 @@
 
                          <button attrs="{'invisible': ['|', ('state', '!=', 'submit'), ('support_type', '!=', 'request')]}" id="button_approve" name="action_approve" string="Approve" class="btn-primary" type="object"/>
 
-                         <button attrs="{'invisible': [('state', '!=', 'in_process')]}" id="button_complete" name="action_complete" string="Complete" class="btn-primary" type="object"/>
+                         <button attrs="{'invisible': [('state', '!=', 'in_process')]}" id="button_complete" name="action_complete" string="Complete" class="btn-primary" type="object" confirm="Are you sure want to complete this task ?"/>
 
                          <button attrs="{'invisible': [('state', '!=', 'approve')]}" id="button_complete" name="action_in_process" string="In Process" class="btn-primary" type="object"/>
 
-                         <button attrs="{'invisible': ['|', ('state', '!=', 'submit'), ('support_type', '!=', 'request')]}" id="button_reject" name="action_reject" string="Reject" class="btn-primary" type="object"/>
+                         <button attrs="{'invisible': ['|', ('state', '!=', 'submit'), ('support_type', '!=', 'request')]}" id="button_reject" name="action_reject" string="Reject" class="btn-primary" type="object" confirm="Are you sure want to reject this new request ?"/>
 
-                        <field name="state" invisible="1"/>
+                         <field name="state" invisible="1"/>
 
                          <field name="state_bug" widget="statusbar" statusbar_visible="draft,submit,in_process,complete" attrs="{'invisible': [('support_type', '!=', 'bug')]}"/>
 
@@ -68,18 +69,32 @@
                     <sheet>
                         <group>
                             <group>
-                                <field name="client_id"/>
-                                <field name="support_type"/>
-                                <field name="submit_date"/>
-                                <field name="start_date"/>
+                                <field name="submit_date" readonly="1"/>
+
+                                <field name="client_id" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+
+                                <field name="support_type" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+
+                                <field name="notes" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+
                             </group>
+
                             <group>
-                                <field name="notes"/>
-                                <field name="approve_reject_date"/>
-                                <field name="complete_date"/>
+                                <field name="start_date" attrs="{'invisible': [('state', '!=', 'in_process')]}" readonly="1"/>
+
+                                <field name="complete_date" attrs="{'invisible': [('state', '!=', 'complete')]}" readonly="1"/>
+
+                                <field name="complete_notes" attrs="{'invisible': [('state','not in', ('in_process', 'complete'))],'readonly':[ '|', ('state','!=','in_process')], 'required': [('state', '=', 'in_process')]}"/>
+
+                                <field name="approve_reject_date" attrs="{'invisible': [('state', '!=', 'approve'), ('state', '!=', 'reject')]}" readonly="1"/>
                             </group>
                         </group>
                     </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="activity_ids" widget="mail_activity"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
