--- a/onpoint_maintenance/views/onpoint_support_view.xml
+++ b/onpoint_maintenance/views/onpoint_support_view.xml
@@ -54,11 +54,11 @@
 
                          <button attrs="{'invisible': ['|', ('state', '!=', 'submit'), ('support_type', '!=', 'request')]}" id="button_approve" name="action_approve" string="Approve" class="btn-primary" type="object"/>
 
-                         <button attrs="{'invisible': [('state', '!=', 'in_process')]}" id="button_complete" name="action_complete" string="Complete" class="btn-primary" type="object" confirm="Are you sure want to complete this task ?"/>
+                         <button attrs="{'invisible': [('state', '!=', 'in_process')]}" id="button_complete" name="action_complete" string="Complete" class="btn-primary" type="object"/>
 
                          <button attrs="{'invisible': [('state', '!=', 'approve')]}" id="button_complete" name="action_in_process" string="In Process" class="btn-primary" type="object"/>
 
-                         <button attrs="{'invisible': ['|', ('state', '!=', 'submit'), ('support_type', '!=', 'request')]}" id="button_reject" name="action_reject" string="Reject" class="btn-primary" type="object" confirm="Are you sure want to reject this new request ?"/>
+                         <button attrs="{'invisible': ['|', ('state', '!=', 'submit'), ('support_type', '!=', 'request')]}" id="button_reject" name="action_reject" string="Reject" class="btn-primary" type="object"/>
 
                          <field name="state" invisible="1"/>
 
@@ -80,13 +80,13 @@
                             </group>
 
                             <group>
-                                <field name="start_date" attrs="{'invisible': [('state', '!=', 'in_process')]}" readonly="1"/>
+                                <field name="approve_reject_date" readonly="1"/>
 
-                                <field name="complete_date" attrs="{'invisible': [('state', '!=', 'complete')]}" readonly="1"/>
+                                <field name="start_date" readonly="1"/>
+
+                                <field name="complete_date" readonly="1"/>
 
                                 <field name="complete_notes" attrs="{'invisible': [('state','not in', ('in_process', 'complete'))],'readonly':[ '|', ('state','!=','in_process')], 'required': [('state', '=', 'in_process')]}"/>
-
-                                <field name="approve_reject_date" attrs="{'invisible': [('state', '!=', 'approve'), ('state', '!=', 'reject')]}" readonly="1"/>
                             </group>
                         </group>
                     </sheet>
